headers/base/orxType.h


  typedef unsigned  int           orxU32;


  typedef unsigned  int           orxBOOL;

  typedef unsigned  long          orxU32;


  typedef unsigned  long          orxBOOL;

  typedef float                   orxFLOAT;

    typedef unsigned  int         orxU32;


    typedef unsigned  int         orxBOOL;

    typedef unsigned  long        orxU32;


    typedef unsigned  long        orxBOOL;

    typedef float                 orxFLOAT;

static const orxU32               orxU32_UNDEFINED      = (orxU32)(-1);



/* *** String & character constants *** */
extern orxDLLAPI const orxSTRING  orxSTRING_EMPTY;


/* *** Status defines *** */
typedef enum __orxSTATUS_t
{
  orxSTATUS_FAILURE = 0,          /**< Failure status, the operation has failed */
  orxSTATUS_SUCCESS,              /**< Success status, the operation has worked has expected */

  orxSTATUS_NUMBER,               /**< Sentinel : Number of status */

  orxSTATUS_NONE = orxENUM_NONE   /**< Invalid status */

} orxSTATUS;